--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,6 +16,8 @@ services:
       - "3000:3000"
     volumes:
       - ./webserver:/app
+    working_dir: /app
+    command: sh -c "npm install && npm start"
     depends_on:
       - mqtt
 
